Fix image shrinking, add lightbox to the images on the forum to make i.e. screenshots readable (#408)

--- a/assets/scss/_forums.scss
+++ b/assets/scss/_forums.scss
@@ -98,6 +98,7 @@
 .l-forum-single-post img,
 .l-search-post img {
   max-width: 100%;
+  height: auto;
 }
 
 .c-single-post-post_info,
